=== 2.0.0 / 2009-12-20

* 1 major enhancement

  * Split out from Vlad.

